<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="340dp"
        android:layout_height="608dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="#FF8000"
            app:endIconTint="#FF8000"
            app:hintTextColor="#FF8000"
            app:startIconTint="#FF8000">

            <EditText
                android:id="@+id/etUserFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/EnterYourFirstName"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="#FF8000"
            app:endIconTint="#FF8000"
            app:hintTextColor="#FF8000"
            app:startIconTint="#FF8000">

            <EditText
                android:id="@+id/etUserLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/EnterYourLastName"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="#FF8000"
            app:endIconTint="#FF8000"
            app:hintTextColor="#FF8000"
            app:startIconTint="#FF8000">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnterYourEmail"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="#FF8000"
            app:endIconTint="#FF8000"
            app:hintTextColor="#FF8000"
            app:startIconTint="#FF8000">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnterYourPassWord"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="#FF8000"
            app:endIconTint="#FF8000"
            app:hintTextColor="#FF8000"
            app:startIconTint="#FF8000">

            <EditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ConfirmYourPassWord"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/purple_500"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:text="register">

        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/AlreadyHaveAccount"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="italic">

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>
